# mti

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/mti/: Cargo.toml
crates/mti/src/: errors.rs  lib.rs  magic_type_id.rs  magic_type_id_ext.rs
crates/mti/tests/: invalid_test_vectors.rs  magic_type_id_ext.rs  serde_tests.rs  tests.rs  valid_test_vectors.rs
crates/typeid-prefix/: Cargo.toml
crates/typeid-prefix/fuzz/: Cargo.toml
crates/typeid-prefix/src/: error.rs  lib.rs  traits.rs  type_id_prefix.rs
crates/typeid-prefix/src/traits/: validate.rs
crates/typeid-prefix/tests/: proofs.rs  proptests.rs  serde_tests.rs
crates/typeid-suffix/: Cargo.toml
crates/typeid-suffix/src/: encoding.rs  errors.rs  lib.rs  namespace.rs  typeid_suffix.rs  versions.rs
crates/typeid-suffix/tests/: serde_integration_test.rs  specification_test_vectors.rs
src/: errors.rs  lib.rs  magic_type_id.rs  magic_type_id_ext.rs
tests/: invalid_test_vectors.rs  magic_type_id_ext.rs  serde_tests.rs  tests.rs  valid_test_vectors.rs
