[package]
name = "mti"
version = "1.0.0"
edition = "2021"
authors = ["rrrodzilla@proton.me"]
description = "Generates human-readable, prefixed, and globally unique identifiers (based on the TypeID spec) for Rust. Improves clarity, type-safety, debugging, and identifier management in your applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GovCraft/mti"
documentation = "https://docs.rs/mti"
readme = "README.md"
keywords = ["typeid", "uuid", "identifier", "distributed-systems"]
categories = ["data-structures", "development-tools", "encoding", "parser-implementations", "web-programming"]

[dependencies]
typeid_prefix = {version ="1.0.5", features = ["serde"]}
typeid_suffix = {version="1.0.2", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
proptest = { version = "1.5.0", features = ["proptest-macro"] }
serde_json = "1.0"

[features]
default = []
instrument = ["typeid_prefix/instrument", "typeid_suffix/instrument"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
cargo_common_metadata = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]