[workspace]
resolver = "2"
members = [
    "crates/mti",
    "crates/typeid-prefix",
    "crates/typeid-suffix",
]

# Shared workspace settings
[workspace.package]
edition = "2021"
authors = ["rrrodzilla@proton.me"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GovCraft/mti"

# Shared dependencies - use workspace = true in member crates
[workspace.dependencies]
# Internal workspace crates
typeid_prefix = { version = "1.2.0", path = "crates/typeid-prefix" }
typeid_suffix = { version = "1.3.0", path = "crates/typeid-suffix" }

# External dependencies
uuid = { version = "1.10", features = ["v1", "v3", "v4", "v5", "v6", "v7"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1" }
arbitrary = { version = "1.3.2", features = ["derive"] }

# Dev dependencies
proptest = { version = "1.5.0", features = ["proptest-macro"] }
serde_json = "1.0"
rstest = "0.21.0"
rstest_reuse = "0.7.0"

# Shared lints configuration
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
cargo_common_metadata = "warn"
