[package]
name = "typeid_prefix"
version = "1.2.1"
edition.workspace = true
authors.workspace = true
description = "A Rust library that implements a type-safe version of the TypePrefix section of the `TypeID` Specification"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/typeid_prefix"
readme = "README.md"
keywords = ["typeid", "prefix", "validation", "sanitization"]
categories = ["data-structures", "development-tools"]

[features]
default = []
instrument = ["dep:tracing"]
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde"]

[dependencies]
arbitrary = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
arbitrary = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
